@@ -1,8 +1,11 @@
+103
+- update OSCam to 11350
+
 102
 - fix the delayed start workaround
 
 101
-- Update OSCam to 11233
+- update OSCam to 11233
 - fix the WeTek_Play problems
 
 100
